
MASTER

* 


* 2.2.6 (January 8th, 2008)

* Introduced a bug in 2.2.5 in the #add_order! core ext for ActiveRecord. Fixed [Ken Collins]


* 2.2.5 (January 4th, 2009)

* Added a log_info_schema_queries class attribute and make all queries to INFORMATION_SCHEMA silent by 
  default. [Ken Collins]

* Fix millisecond support in datetime columns. ODBC::Timestamp incorrectly takes SQL Server milliseconds
  and applies them as nanoseconds. We cope with this at the DBI layer by using SQLServerDBI::Type::SqlserverTimestamp 
  class to parse the before type cast value appropriately. Also update the adapters #quoted_date method 
  to work more simply by converting ruby's #usec milliseconds to SQL Server microseconds. [Ken Collins]

* Core extensions for ActiveRecord now reflect on the connection before doing SQL Server things. Now 
  this adapter is compatible for using with other adapters. [Ken Collins]


* 2.2.4 (December 5th, 2008)

* Fix a type left in #views_real_column_name. Also cache #view_information lookups. [Ken Collins]


* 2.2.3 (December 5th, 2008)

* Changing back to using real table name in column_definitions. Makes sure views get back only the columns 
  that are defined for them with correct names, etc. Now supporting views by looking for NULL default and 
  then if table name is a view, perform a targeted with sub select to the real table name and column name 
  to find true default. [Ken Collins]

* Ensure that add_limit_offset! does not alter sub queries. [Erik Bryn]


2.2.2 (December 2nd, 2008)

* Add support for view defaults by making column_definitions use real table name for schema info. [Ken Collins]

* Include version in connection method and inspection. [Ken Collins]


2.2.1 (November 25th, 2008)

* Add identity insert support for views. Cache #views so that identity #table_name_or_views_table_name 
  will run quickly. [Ken Collins]

* Add views support. ActiveRecord classes can use views. The connection now has a #views method and 